// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`progress demo test progress demo: custom-color.md renders correctly 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    class="arco-progress"
    role="progressbar"
  >
    <div
      class="progress-wrapper"
    >
      <div
        class="progress-track position-right filleted"
      >
        <div
          class="progress-bar filleted"
          style="background: rgb(255, 87, 34); width: 75%;"
        />
      </div>
      <div
        class="text text-right"
        style="color: rgb(255, 87, 34);"
      >
        75%
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progress demo test progress demo: custom-size.md renders correctly 1`] = `
<DocumentFragment>
  <div
    class="progress-demo-custom-size"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="arco-progress"
      role="progressbar"
    >
      <div
        class="progress-wrapper"
      >
        <div
          class="progress-track position-right filleted"
          style="height: 8px;"
        >
          <div
            class="progress-bar filleted"
            style="width: 75%;"
          />
        </div>
        <div
          class="text text-right"
        >
          75%
        </div>
      </div>
    </div>
  </div>
  <div
    class="progress-demo-custom-size"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="arco-progress"
      role="progressbar"
    >
      <div
        class="progress-wrapper"
      >
        <div
          class="progress-track position-right filleted"
          style="height: 4px;"
        >
          <div
            class="progress-bar filleted"
            style="width: 75%;"
          />
        </div>
        <div
          class="text text-right"
        >
          75%
        </div>
      </div>
    </div>
  </div>
  <div
    class="progress-demo-custom-size"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="arco-progress"
      role="progressbar"
    >
      <div
        class="progress-wrapper"
      >
        <div
          class="progress-track position-right filleted"
          style="height: 2px;"
        >
          <div
            class="progress-bar filleted"
            style="width: 75%;"
          />
        </div>
        <div
          class="text text-right"
        >
          75%
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progress demo test progress demo: custom-style.md renders correctly 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    class="arco-progress"
    role="progressbar"
  >
    <div
      class="progress-wrapper"
    >
      <div
        class="progress-track position-follow filleted"
      >
        <div
          class="progress-bar filleted"
          style="width: 75%;"
        >
          <div
            class="wrapper"
          >
            <div
              class="text-follow"
            >
              75%
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progress demo test progress demo: equivalent-progress.md renders correctly 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="60"
    class="arco-progress"
    role="progressbar"
  >
    <div
      class="progress-wrapper"
    >
      <div
        class="progress-track position-right filleted"
      >
        <div
          class="progress-bar filleted"
          style="width: 60%;"
        />
      </div>
      <div
        class="text text-right"
      >
        60%
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progress demo test progress demo: inactive.md renders correctly 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    class="arco-progress progress-disabled"
    role="progressbar"
  >
    <div
      class="progress-wrapper"
    >
      <div
        class="progress-track position-right filleted"
      >
        <div
          class="progress-bar bar-disabled filleted"
          style="width: 75%;"
        />
      </div>
      <div
        class="text text-right text-disabled"
      >
        75%
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progress demo test progress demo: index.md renders correctly 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    class="arco-progress progress-fixed"
    role="progressbar"
    style="position: relative; z-index: 1;"
  >
    <div
      class="progress-wrapper"
    >
      <div
        class="progress-track position-right filleted nav-mode"
      >
        <div
          class="progress-bar filleted"
          style="width: 75%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progress demo test progress demo: inner.md renders correctly 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    class="arco-progress"
    role="progressbar"
  >
    <div
      class="progress-wrapper"
    >
      <div
        class="progress-track position-innerLeft filleted"
      >
        <div
          class="progress-bar filleted"
          style="width: 75%;"
        />
      </div>
      <div
        class="text text-innerLeft"
      >
        75%
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progress demo test progress demo: no-percentage.md renders correctly 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    class="arco-progress"
    role="progressbar"
  >
    <div
      class="progress-wrapper"
    >
      <div
        class="progress-track position-right filleted"
      >
        <div
          class="progress-bar filleted"
          style="width: 75%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progress demo test progress demo: normal.md renders correctly 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    class="arco-progress"
    role="progressbar"
  >
    <div
      class="progress-wrapper"
    >
      <div
        class="progress-track position-right filleted"
      >
        <div
          class="progress-bar filleted"
          style="width: 75%;"
        />
      </div>
      <div
        class="text text-right"
      >
        75%
      </div>
    </div>
  </div>
</DocumentFragment>
`;
